# geocode-glib

./: .gitlab-ci.yml  Makefile.am  NEWS  README  TODO  autogen.sh  configure  configure.ac  geocode-glib-1.0.pc.in  geocode-glib.doap  git.mk  meson.build  meson_options.txt
.ci/: check-abi  undo-delangification.sh
docs/: GeocodeGlib.toml.in  Makefile.am  geocode-glib-docs.xml  gtkdocentities.ent.in  meson.build
geocode-glib/: Makefile.am  geocode-backend.c  geocode-backend.h  geocode-bounding-box.c  geocode-bounding-box.h  geocode-enum-types.c.in  geocode-enum-types.h.in  geocode-error.c  geocode-error.h  geocode-forward.c  geocode-forward.h  geocode-glib-private.h  geocode-glib.c  geocode-glib.h  geocode-glib.map  geocode-glib.symbols  geocode-ipclient.c  geocode-ipclient.h  geocode-location.c  geocode-location.h  geocode-mock-backend.c  geocode-mock-backend.h  geocode-nominatim.c  geocode-nominatim.h  geocode-place.c  geocode-place.h  geocode-reverse.c  geocode-reverse.h  meson.build  test-gcglib.c  test-geoip-parse.c  test-geoip.c  test-geouri.c
geocode-glib/data/: freegeoip-results.json  geoplanet-rio.json  gglib-ip-server-results.json  placefinder-area.json  placefinder-got-error.json  placefinder-no-results.json
geocode-glib/geocode-ip-server/: API-Documentation.txt  Makefile.am  geoip-lookup.c  geoip-server.h  geoip-update.c  test-geoipformat.c
geocode-glib/geocode-ip-server/tests/: launch-web-server.sh
geocode-glib/tests/: Makefile.am  geo-uri.c  geocode-glib.c  geocode-nominatim-test.c  geocode-nominatim-test.h  locale_name2.json  meson.build  mock-backend.c  nominatim-data-type-change.json  nominatim-place_rank.json  pi.json  test-template.test.in
icons/: Makefile.am  meson.build
po/: POTFILES.in  meson.build
